--- a/my520/show.html
+++ b/my520/show.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>I Love You ❤️</title>
+    <title>冉冉专属 ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <style>
@@ -108,7 +108,7 @@
 <script language="javascript">
     function show_date_time() {
         window.setTimeout("show_date_time()", 1000);
-        BirthDay = new Date("2/10/2020 00:00:00"); //这个日期是可以修改的
+        BirthDay = new Date("11/22/2022 01:00:00"); //这个日期是可以修改的
         today = new Date();
         timeold = (today.getTime() - BirthDay.getTime());
         sectimeold = timeold / 1000
@@ -132,7 +132,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("香香❤️|我是|凯子!|我|喜|欢|你|呀|#countdown 5|#time");
+            S.UI.simulate("冉冉❤️|我是|凯凯!|我|喜|欢|你|呀|#countdown 5|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
