--- a/my520/show.html
+++ b/my520/show.html
@@ -132,7 +132,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("冉冉❤️|我是|凯凯!|我|喜|欢|你|呀|#countdown 5|#time");
+            S.UI.simulate("冉冉❤️|我是|凯凯!|我|是|真|的|喜|欢|你|呀|#countdown 5|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
