--- a/my520/result.html
+++ b/my520/result.html
@@ -9713,7 +9713,7 @@
                                                                                                class="s_ipt"
                                                                                                maxlength="255"
                                                                                                autocomplete="off"
-                                                                                               value="李桂香"></span><span
+                                                                                               value="周冉"></span><span
                             class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span><span
                             class="tools"><span id="mHolder">
                                     <div id="mCon"><span>输入法</span></div>
@@ -10551,16 +10551,16 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'FFB95FFF'
-                                                }" href="javascript:;" target="_self">一个王者大神</a></h3>
+                                                }" href="javascript:;" target="_self">一个沉默专家</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic1.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">你敢信她是一个巅峰赛2100分大佬</div>
+                            <div class="c-abstract">你敢信她真的不说话</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
-                                                style="text-decoration:none;">https://i.香香.cn/&nbsp;</a>
+                                                style="text-decoration:none;">https://i.冉冉.cn/&nbsp;</a>
                             </div>
                         </div>
                     </div>
@@ -10612,7 +10612,7 @@
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
                                    title="暴躁">暴躁</a>
                             </p>
-                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.香香.com/ </span>
+                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.冉冉.com/ </span>
                             </p>
                         </div>
                     </div>
@@ -10683,7 +10683,7 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">她说过她想尝尝姐弟恋</a>
+                                                                                            class="op-tieba-general-linktxt">想跟她有个大眼睛女儿</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                     class="op-mthread3-clicknum">20</i></span></td>
