--- a/my520/result.html
+++ b/my520/result.html
@@ -10551,14 +10551,14 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'FFB95FFF'
-                                                }" href="javascript:;" target="_self">一个沉默专家</a></h3>
+                                                }" href="javascript:;" target="_self">一个口嗨专家</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic1.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">你敢信她真的不说话</div>
+                            <div class="c-abstract">打字口嗨谁都比不过她</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                                 style="text-decoration:none;">https://i.冉冉.cn/&nbsp;</a>
                             </div>
